--- a/inclass_website/style.css
+++ b/inclass_website/style.css
@@ -1,18 +1,34 @@
 .navigationbar{
     text-align: center; 
-    align-self: center
+    align-self: center;
     list-style-type: none;
     margin:0;
     padding:0;
     width:120px;
-    padding:0px;
     background-color: aliceblue;
+    text-decoration-color:black;
+    object-position: center;
+    position:absolute;
+    top:10%;
+    left:20%;
+    transform:translate(-50%,-50%);
+
+
+    
+    
 }
 #img{
     margin: auto;
     padding:100px;
+    padding-top: 300px;
     width: 450px;
     height:350px;
+    object-position: center;
+    position:absolute;
+    top:30%;
+    left:50%;
+    transform:translate(-50%,-50%);
+   
 }
 h1{
     text-align: center; 
