--- a/inclass_website/style.css
+++ b/inclass_website/style.css
@@ -1,3 +1,4 @@
+/*
 .navigationbar{
     text-align: center; 
     align-self: center;
@@ -17,6 +18,7 @@
     
     
 }
+*/
 #img{
     margin: auto;
     padding:100px;
@@ -50,3 +52,26 @@ body{
     text-align: center;
     
 }
+
+#video{
+    object-position: center;
+    position:absolute;
+    background-color: azure;
+    top:100%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    
+}
+
+#cat{
+    font-family: sans-serif;
+    color:cadetblue;
+    text-align: center;
+    object-position: center;
+    position:absolute;
+    background-color: azure;
+    top:70%;
+    left:50%;
+    transform:translate(-50%,-50%);
+}
+
