--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,17 @@
 /* global style */
 @import url(./global.css);
 
+:root{
+    --primary-color: #B9887D;
+    --primart-color2:#734338;
+    --title-color:#2c2122;
+    --text-color:#554236;
+    --border-color:#201f1f17;
+    --gradient-color:linear-gradient(90deg,#B9887D 0%,#734338 100%);
+    --shadow-color:0px 10px 30px rgba(118,85,225,0.3);
+    --box-shadow: 0px 10px 30px rgba(57,56,61,0.205);
+
+}
 /* start navigation */
 
 .header {
