--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
 }
 
 .header_area .main-menu .navbar-nav .active a{
-    background: cornflowerblue;
+    background:var(--gradient-color);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
