--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,10 @@
     font: normal 700 25px/12px;
 }
 
+.site-main .project-area .grid .our-project img{
+    border-radius: 15px;
+}
+
 .site-main .project-area .grid .our-project .img a:hover img{
     filter:brightness(1.1)drop-shadow(1px 8px 30px #b1afaf);
 }
@@ -243,4 +247,5 @@ footer.footer-area .social a:hover>i{
 .card .project_card .card-img a:hover img{
     filter:brightness(1.1)drop-shadow(1px 8px 30px #b1afaf);
 }
+
   /* End Project Page Card Area */
